Fix setting updated message placement and setting description overflow

--- a/app/assets/stylesheets/sail/settings.scss
+++ b/app/assets/stylesheets/sail/settings.scss
@@ -68,6 +68,9 @@
     .setting-description {
       clear: both;
       padding: 15px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
 
     .value-input {
